[tool.poetry]
name = "canvas-workflow-helpers"
version = "0.1.0"
description = "An open source project to empower customization of your Canvas instance using canvas-workflow-kit"
authors = ["Canvas Team <engineering@canvasmedical.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
